feat[backedn] add new feature and fix error
