# internal/dto/admin.dto.go
@@ -1,6 +1,9 @@
 package dto
 
-import "time"
+import (
+	"mime/multipart"
+	"time"
+)
 
 type GetAllMovieAdmin struct {
 	Id              int       `json:"id"`
@@ -20,17 +23,46 @@ type GetAllMovieAdmin struct {
 }
 
 type UpdateMovieRequest struct {
-	Title           *string  `json:"title"`
-	Synopsis        *string  `json:"synopsis"`
-	Duration        *int     `json:"duration"`
-	ReleaseDate     *string  `json:"release_date"`
-	DirectorId      *int     `json:"director_id"`
-	PosterUrl       *string  `json:"poster_url"`
-	BackdropUrl     *string  `json:"backdrop_url"`
-	PopularityScore *float64 `json:"popularity_score"`
+	Title           *string               `form:"title"`
+	Synopsis        *string               `form:"synopsis"`
+	Duration        *int                  `form:"duration"`
+	ReleaseDate     *string               `form:"release_date"`
+	DirectorId      *int                  `form:"director_id"`
+	Poster          *multipart.FileHeader `form:"poster"`
+	Backdrop        *multipart.FileHeader `form:"backdrop"`
+	PosterUrl       *string               `form:"-"`
+	BackdropUrl     *string               `form:"-"`
+	PopularityScore *float64              `form:"popularity_score"`
 }
 
 type UpdateMovieResponse struct {
+	Id              int       `json:"id"`
+	Title           string    `json:"title"`
+	Synopsis        string    `json:"synopsis"`
+	Duration        int       `json:"duration"`
+	ReleaseDate     time.Time `json:"release_date"`
+	DirectorId      int       `json:"director_id"`
+	PosterUrl       string    `json:"poster_url"`
+	BackdropUrl     string    `json:"backdrop_url"`
+	PopularityScore float64   `json:"popularity_score"`
+}
+
+type CreateMovieRequest struct {
+	Title           *string               `form:"title"`
+	Synopsis        *string               `form:"synopsis"`
+	Duration        *int                  `form:"duration"`
+	ReleaseDate     *string               `form:"release_date"`
+	DirectorId      *int                  `form:"director_id"`
+	Poster          *multipart.FileHeader `form:"poster"`
+	Backdrop        *multipart.FileHeader `form:"backdrop"`
+	PosterUrl       *string               `form:"-"`
+	BackdropUrl     *string               `form:"-"`
+	GenreIds        string                `form:"genre_ids"`
+	Genres          []int                 `form:"-"`
+	PopularityScore *float64              `form:"popularity_score"`
+}
+
+type CreateMovieResponse struct {
 	Id              int       `json:"id"`
 	Title           string    `json:"title"`
 	Synopsis        string    `json:"synopsis"`
